# pdf-to-excel-parser

./: .gitignore  README.md  pyproject.toml
docs/: API.md  README.md  USAGE.md
docs/examples/: quick_start.ipynb
examples/: cli.py
output/: 0001695030127468200_Ixigo_825_Jan-26_unlocked_parsed.xlsx  4315XXXXXXXX3005_384735_Retail_Amazon_NORM_parsed.xlsx  6808722524927008_03112025_parsed.xlsx  Acct_Statement_XXXXXXXX4651_08022026 (1)_parsed.xlsx  Acct_Statement_XXXXXXXX4651_08022026_parsed.xlsx  Acct_Statement_XXXXXXXX4651_08022026_unlocked_parsed.xlsx  Acct_Statement_XXXXXXXX4651_15012026_parsed.xlsx  Acct_Statement_XXXXXXXX4651_17012026 (1)_parsed.xlsx  Acct_Statement_XXXXXXXX4651_17012026 (2)_parsed.xlsx  Acct_Statement_XXXXXXXX4651_17012026 (3)_parsed.xlsx  Acct_Statement_XXXXXXXX4651_17012026_parsed.xlsx  Acct_Statement_XXXXXXXX4651_28012026_parsed.xlsx  Amazon ICICI Combined PDF_parsed.xlsx  Millenia Combined PDF_parsed.xlsx  MoneyBack Combined_parsed.xlsx  Regallia Combined PDF_parsed.xlsx
statement_parser/: __init__.py  detector.py  output.py  parser.py
statement_parser/formats/: __init__.py  bank_statement.py  base.py  credit_card.py  generic_parser.py  upi_statement.py
statement_parser/patterns/: generic.py  hdfc.py  icici.py  sbi.py
statement_parser/utils/: formatting.py  pdf.py  validation.py
tests/: test_parser.py
tests/test_statements/: Acct_Statement_XXXXXXXX4651_08022026 (1).txt  Acct_Statement_XXXXXXXX4651_08022026.txt  Acct_Statement_XXXXXXXX4651_15012026.txt  Acct_Statement_XXXXXXXX4651_17012026 (1).txt  (+4 more)
